@@ -1,3 +1,8 @@
+Tue Sep 05 01:17:32 2000  George Lebl <jirka@5z.com>
+
+	* scroll-menu.c: when keyboard traversing, make sure we "show" the
+	  currently selected item.
+
 Mon Sep 04 16:01:50 2000  George Lebl <jirka@5z.com>
 
 	* panel.c: apparently mozilla now will support _NETSCAPE_URL and
